--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -17,13 +17,15 @@
 
 body, html{
   background-color: var(--blk-in-dark);
-  border: 3px solid var(--wit-in-dark);
   line-height: 1.15;
   margin: 0px;
   padding: 0px;
   height: 100%;
   min-height: 600px;
   min-width: 300px;
+}
+body{
+  border: 6px solid var(--wit-in-dark);
 }
 
 /*Loading Screen------------------------------*/
@@ -47,7 +49,7 @@ body, html{
   height: 18px;
   background-color: var(--blk-in-dark);
   border: 2px solid var(--wit-in-dark);
-  box-shadow: 0 0 100px var(--wit-in-dark);
+  box-shadow: 0 0 80px var(--wit-in-dark);
 }
 .load_bar{
   height: 100%;
@@ -133,17 +135,28 @@ button{
 }
 .bot-btn{
   padding: 0px;
+  animation: beepbeep 2.5s ease-in-out 10s infinite;
+}
+@keyframes beepbeep{
+  0% {transform: scale(1);}
+  20% {transform: scale(1);}
+  25% {transform: scale(1.2);}
+  30%, 35% {transform: scale(1);}
+  40% {transform: scale(1.1);}
+  45% {transform: scale(1);}
+  50% {transform: scale(1.2);}
+  55% {transform: scale(1);}
+  100% {transform: scale(1);}
 }
 .bot-btn svg{
   fill: var(--wit-in-dark);
+  transition: all 0.05s linear;
 }
 .bot-btn svg:hover{
   fill: #ff1439;
-  transform: scale(1.15);
 }
 .bot-btn svg:active{
-  transition: all 0.05s linear;
-  transform: scale(1);
+  transform: scale(0.9);
 }
 
 /*chatter -----------------------------------------------------------*/
@@ -284,16 +297,16 @@ button{
   transform: scale(0.85);
 }
 
-/*Info---------------------------------------------------------------*/
-.info {
+/*about---------------------------------------------------------------*/
+.about {
   grid-area: i;
 }
-.info fieldset{
+.about fieldset{
   border: 2px solid var(--wit-in-dark);
   box-shadow: 0 0 15px inset black;
   padding: 5px;
 }
-.info legend{
+.about legend{
   color: var(--wit-in-dark);
   font-family: sans-serif;
   font-size: 14px;
@@ -302,22 +315,22 @@ button{
   border: 2px solid black;
   background-color: var(--blk-in-dark);
 }
-.infobtns{
+.aboutbtns{
   display: flex;
   justify-content: space-around;
 }
-.infobtns button{
+.aboutbtns button{
   width: 25px;
   height: 25px;
   padding: 0px;
 }
-.info svg{
+.about svg{
   width: 100%;
   height: 100%;
   fill: var(--wit-in-dark);
   opacity: 0.7;
 }
-.info svg:hover{
+.about svg:hover{
   opacity: 1;
 }
 .add-button{
@@ -328,7 +341,7 @@ button{
   font-family: 'Quicksand', sans-serif;
   font-weight: 600;
 }
-.info p{
+.about p{
   text-align: center;
   color: var(--wit-in-dark);
   font-family: 'Quicksand';
@@ -357,32 +370,40 @@ And also: Thanks to
   top: 0;
   left: 0;
   width: 100%;
+  min-width: 300px;
   height: 100%;
-  padding: 20px;
+  padding: 40px 10px;
   background-color: rgba(0,0,0,0.4);
 }
-.info_contain{
+.info_window{
   width: 70%;
-  height: 280px;
+  height: 445px;
   margin: auto;
-  padding: 10px;
+  padding: 10px 10px 0;
   background-color: var(--wit-in-dark);
   border-radius: 25px;
   text-align: center;
 }
 .info_content{
-  border: 2px solid var(--blk-in-dark);
+  background-color: var(--blk-in-dark);
   border-radius: 20px;
   width: 100%;
-  height: 200px;
+  height: 400px;
+  overflow-y: auto;
+}
+
+.info_links{
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
 }
-.info_content a{
-  display: block;
-  margin: 10px 0;
+
+.info_links a{
+  display: inline-block;
+  padding: 8px 5px 5px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 14px;
+  font-family: 'Quicksand';
   color: var(--blk-in-dark);
 }
 #experimental{
@@ -397,8 +418,45 @@ And also: Thanks to
 }
 .info_close{
   color: var(--wit-in-dark);
-  font-size: 24px;
+  font-size: 14px;
+  font-family: 'Quicksand';
   background-color: var(--blk-in-dark);
 }
 
+
 /*Setting here*/
+.settingbar {
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 360px;
+  background-color: var(--wit-in-dark);
+  color: var(--blk-in-dark);
+  overflow: hidden;
+  transform: translate3d(-365px, 0, 0);
+  transition: transform 0.4s ease-in-out;
+  will-change: transform;
+  box-shadow: 0 0 30px black;
+}
+
+.nav-items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.nav-items li{
+  padding: 10px;
+  text-align: center;
+  font-family: 'Quicksand';
+}
+
+.settingbar div{
+  text-align: center;
+}
+
+.show-sidebar .settingbar {
+  transform: translate3d(0, 0, 0);
+}
