--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -15,7 +15,6 @@
   font-display: swap;
   src: local('Quicksand'), url(https://fonts.gstatic.com/s/quicksand/v21/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format('woff2');
 }
-
 @font-face {
   font-family: 'Megrim';
   font-style: normal;
@@ -42,6 +41,13 @@ body, html{
 }
 body{
   border: 6px solid var(--wit-in-dark);
+}
+
+.typespace,
+.about legend, .about p, .add-button,
+.info_content, .info_links a, #experimental, .info_close,
+.settingbar p{
+  font-family: "Quicksand", sans-serif;
 }
 
 /*Loading Screen------------------------------*/
@@ -97,9 +103,9 @@ button{
   grid-template-rows: 5% 25% 5% 60% 5%;
   grid-template-areas: 
     ". . . . ." 
-    ". p . a ." 
-    ". . . a ." 
-    ". i . a ." 
+    ". p . c ." 
+    ". . . c ." 
+    ". a . c ." 
     ". . . . .";
   height: 100%;
 }
@@ -154,22 +160,13 @@ button{
   animation: beepbeep 2.5s ease-in-out 10s infinite;
 }
 @keyframes beepbeep{
-  0% {transform: scale(1);}
-  20% {transform: scale(1);}
-  25% {transform: scale(1.2);}
-  30%, 35% {transform: scale(1);}
+  0%, 20%, 30%, 35%, 45%, 55%, 100% {transform: scale(1);}
+  25% , 50% {transform: scale(1.2);}
   40% {transform: scale(1.1);}
-  45% {transform: scale(1);}
-  50% {transform: scale(1.2);}
-  55% {transform: scale(1);}
-  100% {transform: scale(1);}
 }
 .bot-btn svg{
-  fill: var(--wit-in-dark);
-  transition: all 0.05s linear;
-}
-.bot-btn svg:hover{
   fill: #ff1439;
+  transition: all 0.05s linear;
 }
 .bot-btn svg:active{
   transform: scale(0.9);
@@ -177,7 +174,7 @@ button{
 
 /*chatter -----------------------------------------------------------*/
 .arrow_box {
-  grid-area: a;
+  grid-area: c;
   display: none;
   border-radius: 36px 0 36px 36px;
   padding: 5px;
@@ -286,7 +283,6 @@ button{
   outline: none;
   background-color: white;
   color: hsl(0,0%,35%);
-  font-family: "Quicksand", sans-serif;
 }
 .typespace:focus{
   color: black;
@@ -308,7 +304,7 @@ button{
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: all 0.05s linear;
+  transition: all 0.03s linear;
 }
 .typespace-enter svg:active{
   fill: #ff1439;
@@ -317,7 +313,7 @@ button{
 
 /*about---------------------------------------------------------------*/
 .about {
-  grid-area: i;
+  grid-area: a;
 }
 .about fieldset{
   border: 2px solid var(--wit-in-dark);
@@ -326,10 +322,9 @@ button{
 }
 .about legend{
   color: var(--wit-in-dark);
-  font-family: sans-serif;
   font-size: 14px;
   padding: 1px 6px;
-  margin: 0 auto;
+  margin: 5px auto;
   border: 2px solid black;
   background-color: var(--blk-in-dark);
 }
@@ -356,20 +351,20 @@ button{
   color: var(--blk-in-dark);
   background-color: var(--wit-in-dark);
   margin: 5px auto;
-  font-family: 'Quicksand', sans-serif;
   font-weight: 600;
 }
 .about p{
   text-align: center;
   color: var(--wit-in-dark);
-  font-family: 'Quicksand';
   font-size: 14px;
   margin: 10px 0;
 }
+
 .release{
   font-family: 'Arial', monospace !important;
   letter-spacing: 2px;
   font-size: 10px !important;
+  margin: 15px 0px 10px !important;
 }
 
 /*Info popup----------------------------------------*/
@@ -393,7 +388,13 @@ button{
   background-color: var(--wit-in-dark);
   border-radius: 25px;
   text-align: center;
+  animation: slide-in-fwd-center 0.6s ease-in both;
 }
+@keyframes slide-in-fwd-center {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
 .info_content{
   background-color: var(--blk-in-dark);
   border-radius: 20px;
@@ -401,7 +402,6 @@ button{
   height: 400px;
   overflow-y: auto;
   color: var(--wit-in-dark);
-  font-family: 'Quicksand';
   text-align: left;
 }
 
@@ -416,7 +416,6 @@ button{
   padding: 8px 5px 5px;
   text-decoration: none;
   font-size: 14px;
-  font-family: 'Quicksand';
   color: var(--blk-in-dark);
 }
 #experimental{
@@ -457,7 +456,6 @@ button{
 .settingbar p{
   padding: 10px;
   text-align: center;
-  font-family: 'Quicksand';
 }
 
 .show-sidebar .settingbar {
