--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -125,19 +125,15 @@ button{
   text-align: center;
   font-size: 40px;
   user-select: none;
-  -ms-user-select: none;
-  will-change: opacity, letter-spacing;
+  will-change: opacity, letter-spacing, filter;
 }
 @keyframes focus-in-expand {
   0% {letter-spacing: -0.5em;
-    -webkit-filter: blur(12px);
-            filter: blur(12px);
-    opacity: 0;
+      filter: blur(12px);
+      opacity: 0;
   }
-  100% {
-    -webkit-filter: blur(0px);
-            filter: blur(0px);
-    opacity: 1;
+  100% {filter: blur(0px);
+        opacity: 1;
   }
 }
 
@@ -362,9 +358,9 @@ button{
 
 .release{
   font-family: 'Arial', monospace !important;
-  letter-spacing: 2px;
   font-size: 10px !important;
   margin: 15px 0px 10px !important;
+  letter-spacing: 2px;
 }
 
 /*Info popup----------------------------------------*/
@@ -382,7 +378,7 @@ button{
 }
 .info_window{
   width: 70%;
-  height: 475px;
+  height: 500px;
   margin: auto;
   padding: 10px 10px 0;
   background-color: var(--wit-in-dark);
@@ -390,16 +386,13 @@ button{
   text-align: center;
   animation: slide-in-fwd-center 0.6s ease-in both;
 }
-@keyframes slide-in-fwd-center {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
+@keyframes slide-in-fwd-center {from {opacity: 0;} to {opacity: 1;}}
 
 .info_content{
   background-color: var(--blk-in-dark);
   border-radius: 20px;
   width: 100%;
-  height: 400px;
+  height: 425px;
   overflow-y: auto;
   color: var(--wit-in-dark);
   text-align: left;
@@ -410,7 +403,6 @@ button{
   display: flex;
   justify-content: space-evenly;
 }
-
 .info_links a{
   display: inline-block;
   padding: 8px 5px 5px;
@@ -420,21 +412,22 @@ button{
 }
 #experimental{
   display: block;
-  color: var(--blk-in-dark);
-  background-color: var(--wit-in-dark);
-  border: 2px solid var(--blk-in-dark);
-  margin: 5px auto;
+  color: var(--wit-in-dark);
+  background-color: var(--blk-in-dark);
+  margin: 5px auto 10px;
   padding: 5px;
-  font-family: 'Quicksand', sans-serif;
   font-weight: 600;
+}
+#experimental:hover, #experimental:active{
+  background-color: var(--wit-in-dark);
+  color: var(--blk-in-dark);
+
 }
 .info_close{
   color: var(--wit-in-dark);
   font-size: 14px;
-  font-family: 'Quicksand';
   background-color: var(--blk-in-dark);
 }
-
 
 /*Setting off-canvas-------------------------------------*/
 .settingbar {
