--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -375,7 +375,7 @@ button{
   width: 100%;
   min-width: 300px;
   height: 100%;
-  padding: 40px 10px;
+  padding: 30px 10px;
   background-color: rgba(0,0,0,0.4);
 }
 .info_window{
@@ -416,7 +416,7 @@ button{
   display: block;
   color: var(--wit-in-dark);
   background-color: var(--blk-in-dark);
-  margin: 5px auto 10px;
+  margin: 5px auto 15px;
   padding: 5px;
   font-weight: 600;
 }
@@ -428,7 +428,7 @@ button{
 .info_close{
   color: var(--wit-in-dark);
   font-size: 14px;
-  background-color: var(--blk-in-dark);
+  background-color: transparent;
 }
 
 /*Setting off-canvas----------------------------------------------*/
@@ -480,6 +480,17 @@ button{
   position: relative;
   top: 2px;
   left: 5px;
+}
+
+#cokieClear{
+  font-family: 'Quicksand';
+  color: var(--blk-in-dark);
+  border: 1px solid var(--blk-in-dark);
+  margin: 8px 5px;
+}
+#cokieClear:hover{
+  color: var(--wit-in-dark);
+  background-color: var(--blk-in-dark);
 }
 /*
 *-----------------------------------------------------------
