--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -482,15 +482,24 @@ button{
   left: 5px;
 }
 
+/* LocalStorage Reset */
 #cokieClear{
+  width: 100%;
+  height: 50px;
+}
+#cokieClear button{
   font-family: 'Quicksand';
   color: var(--blk-in-dark);
   border: 1px solid var(--blk-in-dark);
-  margin: 8px 5px;
+  margin: 8px 5px 4px;
 }
-#cokieClear:hover{
+#cokieClear button:hover{
   color: var(--wit-in-dark);
   background-color: var(--blk-in-dark);
+}
+#cokieClear p{
+  margin: 0;
+  font-size: 11px;
 }
 /*
 *-----------------------------------------------------------
