--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -80,6 +80,9 @@ body{
   background-color: var(--wit-in-dark);
   animation: load 1.6s linear;
 }
+@keyframes load{0% {width: 0%;} 35% {width: 30%;} 65% {width: 70%;} 100% {width: 101%;}
+}
+
 .load_text{
   margin-top: 5px;
   color: var(--wit-in-dark);
@@ -88,8 +91,7 @@ body{
   font-weight: 600;
   text-align: center;
 }
-@keyframes load{0% {width: 0%;} 35%  {width: 30%;} 65%  {width: 70%;} 100% {width: 101%;}
-}
+
 
 /*-------------------------------------------------------------*/
 button{
@@ -335,14 +337,14 @@ button{
   height: 25px;
   padding: 0px;
 }
-.about svg{
+.aboutbtns svg{
   width: 100%;
   height: 100%;
   fill: var(--wit-in-dark);
-  opacity: 0.7;
+  transition: fill 0.1s linear !important;
 }
-.about svg:hover{
-  opacity: 1;
+.aboutbtns svg:hover{
+  fill: #ff1439;
 }
 .add-button{
   display: block;
