--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -258,7 +258,6 @@ button{
   color: var(--blk-in-dark);
   font-size: 14px;
   font-family: "Quicksand", sans-serif;
-  overflow-wrap: break-word;
 }
 
 /*Type----------------------------------------*/
@@ -386,7 +385,7 @@ button{
   margin: auto;
   padding: 10px 10px 0;
   background-color: var(--wit-in-dark);
-  border-radius: 25px;
+  border-radius: 25px 0 25px 25px;
   text-align: center;
   animation: slide-in-fwd-center 0.5s ease-in both;
 }
@@ -394,7 +393,7 @@ button{
 
 .info_content{
   background-color: var(--blk-in-dark);
-  border-radius: 20px;
+  border-radius: 20px 0 0 20px;
   width: 100%;
   height: 425px;
   padding: 0 5px;
