--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -47,7 +47,7 @@ body{
 
 .typespace, .human_talk, .boct_talk,
 .about legend, .about p, .add-button,
-.info_content, .info_links a, #experimental, .info_close,
+.info_content, .info_links a, .text1, .info_close,
 .settingbar{
   font-family: "Quicksand", sans-serif;
 }
@@ -68,19 +68,18 @@ body{
 }
 .loader{
   margin: auto;
-  padding: 0;
   width: 120px;
   height: 18px;
   background-color: var(--blk-in-dark);
-  border: 2px solid var(--wit-in-dark);
-  box-shadow: 0 0 80px var(--wit-in-dark);
+  border: 1px solid var(--wit-in-dark);
+  box-shadow: 0 0 50px var(--wit-in-dark);
 }
 .load_bar{
   height: 100%;
   background-color: var(--wit-in-dark);
   animation: load 1.6s linear;
 }
-@keyframes load{0% {width: 0%;} 35% {width: 30%;} 65% {width: 70%;} 100% {width: 100%;}
+@keyframes load{0% {width: 0%;} 35% {width: 30%;} 65% {width: 70%;} 100% {width: 101%;}
 }
 
 .load_text{
@@ -104,7 +103,7 @@ button{
 .alll{
   display: grid;
   grid-template-columns: 50px 300px 60px auto 60px;
-  grid-template-rows: 5% 25% minmax(auto,calc(65% - 275px)) 275px 5%;
+  grid-template-rows: 5% 25% minmax(auto,calc(65% - 265px)) 265px 5%;
   grid-template-areas: 
     ". . . . ." 
     ". p . c ." 
@@ -399,11 +398,12 @@ pwa-install::part(installModal){
   background-color: var(--blk-in-dark);
   border-radius: 20px 0 0 20px;
   width: 100%;
-  height: 425px;
+  height: 435px;
   padding: 0 5px;
   overflow-y: auto;
   color: var(--wit-in-dark);
   text-align: left;
+  font-size: 12px;
 }
 
 .info_links{
@@ -413,23 +413,14 @@ pwa-install::part(installModal){
 }
 .info_links a{
   display: inline-block;
-  padding: 8px 5px 5px;
+  padding: 5px;
   text-decoration: none;
   font-size: 14px;
   color: var(--blk-in-dark);
 }
-#experimental{
-  display: block;
-  color: var(--wit-in-dark);
-  background-color: var(--blk-in-dark);
-  margin: 5px auto 15px;
-  padding: 5px;
-  font-weight: 600;
-}
-#experimental:hover, #experimental:active{
-  background-color: var(--wit-in-dark);
+.text1{
   color: var(--blk-in-dark);
-
+  font-size: 12px;
 }
 .info_close{
   color: var(--wit-in-dark);
