--- a/boctstyle/boctmediaq.css
+++ b/boctstyle/boctmediaq.css
@@ -13,7 +13,7 @@
 @media screen and (max-width: 950px) and (min-width: 620px) {
   .alll{
     grid-template-columns: 10px 250px 20px auto 10px;
-    grid-template-rows: 5% 20% minmax(auto,calc(70% - 290px)) 290px 5%;
+    grid-template-rows: 5% 20% minmax(auto,calc(70% - 280px)) 280px 5%;
   }
   .arrow_box:after {
     top: 90px;
@@ -76,7 +76,7 @@
     background-color: transparent;
   }
   .pwaBtn{
-    margin-top: 20px;
+    padding: 10px 0 0;
   }
   .about p, .about hr, .about legend{
     display: none;
