Polished HTML and CSS - HTML markup updates - Removed Transitions for low-width screens

--- a/boctstyle/boctmediaq.css
+++ b/boctstyle/boctmediaq.css
@@ -22,6 +22,12 @@
 
 
 @media screen and (max-width: 620px) {
+  *,
+  *::after,
+  *::before{
+    transition: 0s;
+}
+
   body, html{
     width: auto;
     height: auto;
