--- a/public/styles/boct.css
+++ b/public/styles/boct.css
@@ -15,18 +15,14 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Quicksand"),
-    url(https://fonts.gstatic.com/s/quicksand/v21/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2)
-      format("woff2");
+  src: local("Quicksand"), url(https://fonts.gstatic.com/s/quicksand/v21/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format("woff2");
 }
 @font-face {
   font-family: "Megrim";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Megrim"),
-    url(https://fonts.gstatic.com/s/megrim/v11/46kulbz5WjvLqJZVam_h.woff2)
-      format("woff2");
+  src: local("Megrim"), url(https://fonts.gstatic.com/s/megrim/v11/46kulbz5WjvLqJZVam_h.woff2) format("woff2");
 }
 
 *,
