--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,3 +81,49 @@ button {
     ". . . . .";
   height: 100%;
 }
+
+/*media queries------------------------------------------------------*/
+
+@media screen and (max-width: 950px) and (min-width: 620px) {
+  #Main {
+    grid-template-columns: 10px 250px 20px auto 10px;
+    grid-template-rows: 5% 20% minmax(auto, calc(70% - 280px)) 280px 5%;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  *,
+  *::after,
+  *::before {
+    transition: 0s;
+  }
+
+  body,
+  html {
+    width: auto;
+    height: auto;
+    border: none;
+  }
+  html {
+    overflow: auto;
+  }
+  #Main {
+    padding: 5px 5px 10px;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 145px minmax(450px, 78vh) minmax(50px, auto);
+    grid-template-areas:
+      ". p ."
+      "c c c"
+      ". a .";
+    height: auto;
+  }
+  .info_window {
+    width: 95%;
+    padding: 7px;
+  }
+
+  .settingbar {
+    width: 245px;
+    transform: translate3d(-250px, 0, 0);
+  }
+}
