--- a/src/styles/other_components.css
+++ b/src/styles/other_components.css
@@ -1,45 +1,19 @@
-/*Info popup----------------------------------------*/
-#modal_root {
-  z-index: -1;
-  margin: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-width: 300px;
-  height: 100%;
-  padding: 30px 10px;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
 .info_window {
-  width: 85%;
+  float: left;
+  width: 90%;
   max-width: 800px;
-  height: 500px;
-  margin: auto;
-  padding: 10px 10px 0;
-  background-color: var(--wit-in-dark);
-  border-radius: 25px 0 25px 25px;
+  border: 2px solid var(--wit-in-dark);
+  margin: 6px 4px 6px;
+  padding: 5px 5px 0;
+  background: #e64c63;
   text-align: center;
-  animation: slide-in-fwd-center 0.5s ease-in both;
-}
-@keyframes slide-in-fwd-center {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 .info_content {
   background-color: var(--blk-in-dark);
-  border-radius: 20px 0 0 20px;
-  width: 100%;
-  height: 435px;
-  padding: 0 5px;
-  overflow-y: auto;
   color: var(--wit-in-dark);
+  width: 100%;
+  padding: 5px;
   text-align: left;
   font-size: 12px;
 }
@@ -57,9 +31,10 @@
   color: var(--blk-in-dark);
 }
 .text1 {
-  color: var(--blk-in-dark);
+  color: var(--wit-in-dark);
   font-size: 12px;
-  margin: 10px 0 15px;
+  text-align: center;
+  margin: 0;
 }
 #info_close {
   color: var(--wit-in-dark);
