--- a/src/components/boctHead/bocthead.scss
+++ b/src/components/boctHead/bocthead.scss
@@ -62,11 +62,13 @@
     transform: scale(1.1);
   }
 }
+
 #BOcT svg {
   fill: #ff1439;
-}
-#BOcT svg:active {
-  transform: scale(0.9);
+
+  &:active {
+    transform: scale(0.9);
+  }
 }
 
 @media screen and (max-width: 950px) {
