--- a/src/components/chatBox/chatBox.scss
+++ b/src/components/chatBox/chatBox.scss
@@ -7,7 +7,22 @@
   box-shadow: 2px 2px 20px black;
   animation: scale-in-top 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   will-change: transform;
+
+  &:after {
+    top: 120px;
+    right: 100%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-right-color: var(--wit-in-dark);
+    border-width: 27px;
+    margin-top: -27px;
+  }
 }
+
 @keyframes scale-in-top {
   0% {
     transform: scale(0);
@@ -17,20 +32,6 @@
     transform: scale(1);
     transform-origin: -80px 95px;
   }
-}
-
-#Chatter:after {
-  top: 120px;
-  right: 100%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-right-color: var(--wit-in-dark);
-  border-width: 27px;
-  margin-top: -27px;
 }
 
 /*chatspace-----------------------------------*/
@@ -43,20 +44,22 @@
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-behavior: smooth;
-}
 
-.talk_box::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
-  background-color: #f5f5f5;
-}
-.talk_box::-webkit-scrollbar {
-  width: 10px;
-  background-color: #f5f5f5;
-  cursor: pointer;
-}
-.talk_box::-webkit-scrollbar-thumb {
-  background-color: #5c5c5c;
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.8);
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
+    cursor: pointer;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #5c5c5c;
+  }
 }
 
 /*message CSS---------------------------------*/
@@ -105,9 +108,10 @@
   outline: none;
   background-color: white;
   color: hsl(0, 0%, 35%);
-}
-#typespace:focus {
-  color: black;
+
+  &:focus {
+    color: black;
+  }
 }
 
 #typespace_submitBtn {
@@ -119,16 +123,18 @@
   text-align: center;
   border-radius: 0 5px 5px 0;
   border: none;
-}
-#typespace_submitBtn svg {
-  fill: var(--wit-in-dark);
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-#typespace_submitBtn svg:active {
-  fill: #ff1439;
-  transform: scale(0.85);
+
+  svg {
+    fill: var(--wit-in-dark);
+    width: 100%;
+    height: 100%;
+    text-align: center;
+
+    &:active {
+      fill: #ff1439;
+      transform: scale(0.85);
+    }
+  }
 }
 
 @media screen and (max-width: 950px) and (min-width: 620px) {
